--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A JS library to search and highlight text in HTML from a string.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "dev": "tsc && node dist/index.js"
